@@ -18,15 +18,34 @@ void __printf(const char *szFormat, ...);
  #define _STATMEM
 #endif
 
-#if defined(PORT_HOST) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r2ka) || defined(__SDCC_r3ka) || defined(__SDCC_gbz80) || defined(__SDCC_stm8) || defined(__SDCC_tlcs90) || defined(__SDCC_ez80_z80) || defined(__SDCC_z80n)
-# define __data
-# define __idata
-# define __pdata
-# define __xdata
-# define __code
-# define __near
-# define __far
-# define __reentrant
+#ifdef __SDCC_stm8
+#define __data
+#define __idata
+#define __pdata
+#define __xdata
+#define __code
+#define __near
+#define __far
+#define __reentrant
+#endif
+
+#if defined(PORT_HOST) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r2ka) || defined(__SDCC_r3ka) || defined(__SDCC_gbz80) || defined(__SDCC_tlcs90) || defined(__SDCC_ez80_z80) || defined(__SDCC_z80n)
+#define __data
+#define __idata
+#define __pdata
+#define __xdata
+#define __code
+#define __near
+#define __far
+#define __reentrant
+#else
+#define __smallc
+#define __z88dk_callee
+#define __z88dk_fastcall
+#endif
+
+#ifdef __SDCC_gbz80
+#define __z88dk_fastcall
 #endif
 
 #if defined(__SDCC_pdk13) || defined(__SDCC_pdk14) || defined(__SDCC_pdk15)
