@@ -4,10 +4,6 @@
    A peephole optimizer bug in calls to __z88dk_fastcall.
 */
 
-#if !defined(__SDCC_z80) && !defined(__SDCC_z180) && !defined(__SDCC_r2k) && !defined(__SDCC_r3ka) && !defined(__SDCC_tlcs90)
-#define __z88dk_fastcall
-#endif
-
 #include <string.h>
 #include <testfwk.h>
 
