@@ -116,7 +116,7 @@ void mallocfree(void)
 	free(c);
 
 	/* Check that we can allocate at least 256 bytes at once. */
-#if defined(PORT_HOST) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka)
+#if defined(PORT_HOST) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r2ka) || defined(__SDCC_r3ka)
 	a = malloc(256);
 	ASSERT(a);
 	free(a);
