@@ -4,13 +4,6 @@
 #include <stdlib.h>
 
 #ifndef __SDCC_pdk14
-#if !defined(__SDCC_z80) && !defined(__SDCC_z180) && !defined(__SDCC_r2k) && !defined(__SDCC_r3ka) && !defined(__SDCC_tlcs90) && !defined(__SDCC_ez80_z80)
-#define __z88dk_fastcall
-#define __z88dk_callee
-#endif
-#if !defined(__SDCC_z80) && !defined(__SDCC_z180) && !defined(__SDCC_r2k) && !defined(__SDCC_r3ka) && !defined(__SDCC_tlcs90) && !defined(__SDCC_ez80_z80)
-#define __smallc
-#endif
 
 /* __z88dk_fastcall is supported both on the caller and the callee side */
 
